# gconfig-py

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  NOTICE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.claude/: settings.json
.claude/hooks/: pre-commit-docs.sh
.claude/rules/: git-safety.md  mcp-security.md  session-start.md
claude_code/rahulchauhan/: CLAUDE.md
claude_code/templates/: user-profile-template.md
src/gconfig/: __init__.py  cache.py  config.py  exceptions.py  parse.py
test/: test_config.py
