[project]
name = "gconfig"
version = "0.2.3"
description = "Gordian global config library for Python"
license = { file = "LICENSE" }
requires-python = ">=2.7"
authors = [
    { name = "Koray Gocmen", email = "koray@gordiansoftware.com" },
    { name = "Jakub Klapacz", email = "jakub@gordiansoftware.com" },
]

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
